# faq-platform

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  app.jsonl  docker-compose.yml  pyproject.toml  test.py
app/: Dockerfile  main.py
app/bot/: instance.py  middleware.py  storage.py
app/core/: __init__.py  commands.py  config.py  exceptions.py  logging.py  requests.py  responses.py
app/dialogs/: __init__.py  actions.py
app/handlers/: __init__.py  common.py  root.py
app/repositories/: __init__.py  questions.py  users.py
app/services/: __init__.py  notification.py
app/storage/: core.py  engine.py  init.py
app/utils/: config.py
bot/: Dockerfile  __main__.py  main.py
bot/core/: __init__.py  certificate.py  config.py  dirs.py
bot/dialogs/: actions.py
bot/dispatch/: instance.py
bot/services/: http_client.py  notification.py
config/: commands.en.yml  commands.example.yml  logging.dev.yml  logging.prod.yml  logging.yml  messages.en.yml  messages.example.yml  messages.ru.yml  responses.yml
config/bot/: commands.example.yml  constants.example.yml  messages.example.yml
config/orchestrator/: redis.conf  requests.yandex.yml  requests.yml
docs/: architecture.md  commands.md  configuration.md  messages.md  migrations.md  setup-and-configuration.md  setup.md
env/: bot.env.example  orchestrator.env.example
orchestrator/: Dockerfile  __main__.py  main.py
orchestrator/api/: __init__.py  dependencies.py  errors.py
orchestrator/core/: __init__.py  config.py  requests.py
orchestrator/db/: core.py  session.py
shared/api/: client.py
(+253 files in other folders)
