[tool.poetry]
name = "faq-bot"
version = "3.0.0"
description = "Telegram FAQ bot with a FastAPI orchestrator and semantic search."
authors = ["artrubadur"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.bot.dependencies]
aiogram = {version = "^3.23.0", python = ">=3.12,<3.15"}
redis = "^7.2.0"

[tool.poetry.group.orchestrator.dependencies]
sqlalchemy = "^2.0.45"
pgvector = "^0.4.2"
asyncpg = "^0.31.0"
fastapi = "^0.135.2"
uvicorn = "^0.42.0"
alembic = "^1.18.4"

[tool.poetry.group.shared.dependencies]
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
pyyaml = "^6.0.3"
loguru = "^0.7.3"
python-dotenv = "^1.2.1"
pydantic-settings-yaml = "^0.2.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.10,<0.15.0"
black = ">=25.12.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
pyright = ">=1.1.407,<2.0.0"

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
